# Bible_Read

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-build-test.yml  rust-build.yml  rust-clippy.yml  rust-release.yml
bible/: Cargo.toml
bible/src/: bible.json  bible_enum.rs  constants.rs  init_bible.rs  lib.rs
book/: Cargo.toml
book/src/: lib.rs
book/src/book_components/: chapter.rs  chapter_number.rs  chapter_store.rs  max_verse.rs  mod.rs  name.rs  verse.rs
engine/: Cargo.toml
engine/src/: cli.rs  main.rs
read/: Cargo.toml  test.ron
read-bible/: Cargo.toml
read-bible/src/: cli.rs  main.rs
read-bible/src/cmd/: choice_entity.rs  mod.rs  next.rs  next_previous.rs  previous.rs  set.rs  show.rs
read/src/: file_operations.rs  lib.rs  reading.rs  reading_save.rs
widget/: Cargo.toml
