[package]
name = "read-bible"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
anyhow = "1.0"
read = {path = "../read"}
book = {path="../book"}
bible = {path = "../bible"}
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"
log = "0.4"
env_logger = "0.11"
confy = "0.6"
tiberius = "0.12"
