[package]
name = "read-bible"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2"
anyhow = "1.0"
read = {path = "../read"}
book = {path="../book"}
bible = {path = "../bible"}
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"
serde = {version = "1", features = ["derive"]}
confy = "0.6"
tiberius = "0.12"
